Projects/apache-with-HPA/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: apache
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd:latest
        ports:
        - containerPort: 80
        resources:              # This section defines resource requests and limits for the container
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
